--- a/config/db.properties
+++ b/config/db.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=cabManage
+jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=codeitup
 jdbc.username=sa
 jdbc.password=123456
 jdbc.maxTotal=30
